@@ -77,7 +77,7 @@ provide the libraries needed to support them:
 
   - AAC - libfaad2 version 2.7 (http://www.audiocoding.com/), and
           libid3tag (http://www.underbit.com/products/mad/)
-  - FLAC - libFLAC version 1.1 (http://flac.sourceforge.net/)
+  - FLAC - libFLAC version 1.1.3 (http://flac.sourceforge.net/)
   - MIDI - libtimidity version 0.1 (http://timidity.sourceforge.net/)
   - modplug - libmodplug version 0.7 (http://modplug-xmms.sourceforge.net/)
   - MP3 - libmad with libid3tag (ftp://ftp.mars.org/pub/mpeg/)
