@@ -505,13 +505,6 @@ then
 	echo
 fi
 
-if test "x$FLAC_DEPRECATED" = "xyes"
-then
-	echo "WARNING: After release 2.5 MOC will require FLAC release 1.1.3 or"
-	echo "         later.  Plan to upgrade your libraries soon."
-	echo
-fi
-
 if test "x$POPT_MISSING" = "xyes"
 then
 	echo "WARNING: After release 2.5 MOC will require libpopt.  Plan"
