@@ -29,14 +29,6 @@
 #include "log.h"
 #include "io.h"
 
-/* By LEGACY_FLAC we mean pre-1.1.3, before FLAC__SeekableStreamDecoder
- * was merged into FLAC__StreamDecoder. */
-#if !defined(FLAC_API_VERSION_CURRENT) || FLAC_API_VERSION_CURRENT < 8
-#define LEGACY_FLAC
-#else
-#undef LEGACY_FLAC
-#endif
-
 #define MAX_SUPPORTED_CHANNELS		2
 
 #define SAMPLES_PER_WRITE		512
@@ -44,11 +36,7 @@
 
 struct flac_data
 {
-#ifdef LEGACY_FLAC
-	FLAC__SeekableStreamDecoder *decoder;
-#else
 	FLAC__StreamDecoder *decoder;
-#endif
 	struct io_stream *stream;
 	int bitrate;
 	int avg_bitrate;
@@ -122,11 +110,7 @@ static size_t pack_pcm_signed (FLAC__byte *data,
 }
 
 static FLAC__StreamDecoderWriteStatus write_callback (
-#ifdef LEGACY_FLAC
-		const FLAC__SeekableStreamDecoder *decoder ATTR_UNUSED,
-#else
 		const FLAC__StreamDecoder *decoder ATTR_UNUSED,
-#endif
 		const FLAC__Frame *frame,
 		const FLAC__int32 * const buffer[], void *client_data)
 {
@@ -144,11 +128,7 @@ static FLAC__StreamDecoderWriteStatus write_callback (
 }
 
 static void metadata_callback (
-#ifdef LEGACY_FLAC
-		const FLAC__SeekableStreamDecoder *decoder ATTR_UNUSED,
-#else
 		const FLAC__StreamDecoder *decoder ATTR_UNUSED,
-#endif
 		const FLAC__StreamMetadata *metadata, void *client_data)
 {
 	struct flac_data *data = (struct flac_data *)client_data;
@@ -166,11 +146,7 @@ static void metadata_callback (
 }
 
 static void error_callback (
-#ifdef LEGACY_FLAC
-		const FLAC__SeekableStreamDecoder *decoder ATTR_UNUSED,
-#else
 		const FLAC__StreamDecoder *decoder ATTR_UNUSED,
-#endif
 		FLAC__StreamDecoderErrorStatus status, void *client_data)
 {
 	struct flac_data *data = (struct flac_data *)client_data;
@@ -183,15 +159,9 @@ static void error_callback (
 		decoder_error (&data->error, ERROR_FATAL, 0, "FLAC: lost sync");
 }
 
-#ifdef LEGACY_FLAC
-static FLAC__SeekableStreamDecoderReadStatus read_callback (
-		const FLAC__SeekableStreamDecoder *decoder ATTR_UNUSED,
-		FLAC__byte buffer[], unsigned *bytes, void *client_data)
-#else
 static FLAC__StreamDecoderReadStatus read_callback (
 		const FLAC__StreamDecoder *decoder ATTR_UNUSED,
 		FLAC__byte buffer[], size_t *bytes, void *client_data)
-#endif
 {
 	struct flac_data *data = (struct flac_data *)client_data;
 	ssize_t res;
@@ -200,11 +170,7 @@ static FLAC__StreamDecoderReadStatus read_callback (
 
 	if (res > 0) {
 		*bytes = res;
-#ifdef LEGACY_FLAC
-		return FLAC__SEEKABLE_STREAM_DECODER_READ_STATUS_OK;
-#else
 		return FLAC__STREAM_DECODER_READ_STATUS_CONTINUE;
-#endif
 	}
 
 	if (res == 0) {
@@ -215,92 +181,49 @@ static FLAC__StreamDecoderReadStatus read_callback (
 
 	error ("read error: %s", io_strerror(data->stream));
 
-#ifdef LEGACY_FLAC
-	return FLAC__SEEKABLE_STREAM_DECODER_READ_STATUS_ERROR;
-#else
 	return FLAC__STREAM_DECODER_READ_STATUS_ABORT;
-#endif
 }
 
-#ifdef LEGACY_FLAC
-static FLAC__SeekableStreamDecoderSeekStatus seek_callback (
-		const FLAC__SeekableStreamDecoder *decoder ATTR_UNUSED,
-		FLAC__uint64 absolute_byte_offset, void *client_data)
-#else
 static FLAC__StreamDecoderSeekStatus seek_callback (
 		const FLAC__StreamDecoder *decoder ATTR_UNUSED,
 		FLAC__uint64 absolute_byte_offset, void *client_data)
-#endif
 {
 	struct flac_data *data = (struct flac_data *)client_data;
 
-#ifdef LEGACY_FLAC
-	return io_seek(data->stream, absolute_byte_offset, SEEK_SET) >= 0
-		? FLAC__SEEKABLE_STREAM_DECODER_SEEK_STATUS_OK
-		: FLAC__SEEKABLE_STREAM_DECODER_SEEK_STATUS_ERROR;
-#else
 	return io_seek(data->stream, absolute_byte_offset, SEEK_SET) >= 0
 		? FLAC__STREAM_DECODER_SEEK_STATUS_OK
 		: FLAC__STREAM_DECODER_SEEK_STATUS_ERROR;
-#endif
 }
 
-#ifdef LEGACY_FLAC
-static FLAC__SeekableStreamDecoderTellStatus tell_callback (
-		const FLAC__SeekableStreamDecoder *decoder ATTR_UNUSED,
-		FLAC__uint64 *absolute_byte_offset, void *client_data)
-#else
 static FLAC__StreamDecoderTellStatus tell_callback (
 		const FLAC__StreamDecoder *decoder ATTR_UNUSED,
 		FLAC__uint64 *absolute_byte_offset, void *client_data)
-#endif
 {
 	struct flac_data *data = (struct flac_data *)client_data;
 
 	*absolute_byte_offset = io_tell (data->stream);
-#ifdef LEGACY_FLAC
-	return FLAC__SEEKABLE_STREAM_DECODER_TELL_STATUS_OK;
-#else
+
 	return FLAC__STREAM_DECODER_TELL_STATUS_OK;
-#endif
 }
 
-#ifdef LEGACY_FLAC
-static FLAC__SeekableStreamDecoderLengthStatus length_callback (
-		const FLAC__SeekableStreamDecoder *decoder ATTR_UNUSED,
-		FLAC__uint64 *stream_length, void *client_data)
-#else
 static FLAC__StreamDecoderLengthStatus length_callback (
 		const FLAC__StreamDecoder *decoder ATTR_UNUSED,
 		FLAC__uint64 *stream_length, void *client_data)
-#endif
 {
 	off_t file_size;
 	struct flac_data *data = (struct flac_data *)client_data;
 
 	file_size = io_file_size (data->stream);
 	if (file_size == -1)
-#ifdef LEGACY_FLAC
-		return FLAC__SEEKABLE_STREAM_DECODER_LENGTH_STATUS_ERROR;
-#else
 		return FLAC__STREAM_DECODER_LENGTH_STATUS_ERROR;
-#endif
 
 	*stream_length = file_size;
 
-#ifdef LEGACY_FLAC
-	return FLAC__SEEKABLE_STREAM_DECODER_LENGTH_STATUS_OK;
-#else
 	return FLAC__STREAM_DECODER_LENGTH_STATUS_OK;
-#endif
 }
 
 static FLAC__bool eof_callback (
-#ifdef LEGACY_FLAC
-		const FLAC__SeekableStreamDecoder *decoder ATTR_UNUSED,
-#else
 		const FLAC__StreamDecoder *decoder ATTR_UNUSED,
-#endif
 		void *client_data)
 {
 	struct flac_data *data = (struct flac_data *)client_data;
@@ -331,51 +254,6 @@ static void *flac_open_internal (const char *file, const int buffered)
 		return data;
 	}
 
-#ifdef LEGACY_FLAC
-	if (!(data->decoder = FLAC__seekable_stream_decoder_new())) {
-		decoder_error (&data->error, ERROR_FATAL, 0,
-				"FLAC__seekable_stream_decoder_new() failed");
-		return data;
-	}
-
-	FLAC__seekable_stream_decoder_set_md5_checking (data->decoder, false);
-
-	FLAC__seekable_stream_decoder_set_metadata_ignore_all (data->decoder);
-	FLAC__seekable_stream_decoder_set_metadata_respond (data->decoder,
-			FLAC__METADATA_TYPE_STREAMINFO);
-	FLAC__seekable_stream_decoder_set_client_data (data->decoder, data);
-	FLAC__seekable_stream_decoder_set_metadata_callback (data->decoder,
-			metadata_callback);
-	FLAC__seekable_stream_decoder_set_write_callback (data->decoder,
-			write_callback);
-	FLAC__seekable_stream_decoder_set_error_callback (data->decoder,
-			error_callback);
-	FLAC__seekable_stream_decoder_set_read_callback (data->decoder,
-			read_callback);
-	FLAC__seekable_stream_decoder_set_seek_callback (data->decoder,
-			seek_callback);
-	FLAC__seekable_stream_decoder_set_tell_callback (data->decoder,
-			tell_callback);
-	FLAC__seekable_stream_decoder_set_length_callback (data->decoder,
-			length_callback);
-	FLAC__seekable_stream_decoder_set_eof_callback (data->decoder,
-			eof_callback);
-
-	if (FLAC__seekable_stream_decoder_init(data->decoder)
-			!= FLAC__SEEKABLE_STREAM_DECODER_OK) {
-		decoder_error (&data->error, ERROR_FATAL, 0,
-				"FLAC__seekable_stream_decoder_init() failed");
-		return data;
-	}
-
-	if (!FLAC__seekable_stream_decoder_process_until_end_of_metadata(
-				data->decoder)) {
-		decoder_error (&data->error, ERROR_FATAL, 0,
-				"FLAC__seekable_stream_decoder_process_until_end_of_metadata()"
-				" failed.");
-		return data;
-	}
-#else
 	if (!(data->decoder = FLAC__stream_decoder_new())) {
 		decoder_error (&data->error, ERROR_FATAL, 0,
 				"FLAC__stream_decoder_new() failed");
@@ -400,7 +278,6 @@ static void *flac_open_internal (const char *file, const int buffered)
 				"FLAC__stream_decoder_process_until_end_of_metadata() failed.");
 		return data;
 	}
-#endif
 
 	data->ok = 1;
 	data->avg_bitrate = data->bits_per_sample * data->sample_rate;
@@ -418,13 +295,8 @@ static void flac_close (void *void_data)
 	struct flac_data *data = (struct flac_data *)void_data;
 
 	if (data->decoder) {
-#ifdef LEGACY_FLAC
-		FLAC__seekable_stream_decoder_finish (data->decoder);
-		FLAC__seekable_stream_decoder_delete (data->decoder);
-#else
 		FLAC__stream_decoder_finish (data->decoder);
 		FLAC__stream_decoder_delete (data->decoder);
-#endif
 	}
 
 	io_close (data->stream);
@@ -547,21 +419,12 @@ static int flac_seek (void *void_data, int sec)
 	                               (double)data->total_samples);
 
 
-#ifdef LEGACY_FLAC
-	if (FLAC__seekable_stream_decoder_seek_absolute(data->decoder,
-				target_sample))
-#else
 	if (FLAC__stream_decoder_seek_absolute(data->decoder, target_sample))
-#endif
 		return sec;
-	else {
-#ifdef LEGACY_FLAC
-		logit ("FLAC__seekable_stream_decoder_seek_absolute() failed.");
-#else
-		logit ("FLAC__stream_decoder_seek_absolute() failed.");
-#endif
-		return -1;
-	}
+
+	logit ("FLAC__stream_decoder_seek_absolute() failed.");
+
+	return -1;
 }
 
 static int flac_decode (void *void_data, char *buf, int buf_len,
@@ -594,34 +457,19 @@ static int flac_decode (void *void_data, char *buf, int buf_len,
 	if (!data->sample_buffer_fill) {
 		debug ("decoding...");
 
-#ifdef LEGACY_FLAC
-		if (FLAC__seekable_stream_decoder_get_state(data->decoder) == FLAC__SEEKABLE_STREAM_DECODER_END_OF_STREAM)
-#else
-		if (FLAC__stream_decoder_get_state(data->decoder) == FLAC__STREAM_DECODER_END_OF_STREAM)
-#endif
-		{
+		if (FLAC__stream_decoder_get_state(data->decoder) == FLAC__STREAM_DECODER_END_OF_STREAM) {
 			logit ("EOF");
 			return 0;
 		}
 
-#ifdef LEGACY_FLAC
-		if (!FLAC__seekable_stream_decoder_process_single(data->decoder))
-#else
-		if (!FLAC__stream_decoder_process_single(data->decoder))
-#endif
-		{
+		if (!FLAC__stream_decoder_process_single(data->decoder)) {
 			decoder_error (&data->error, ERROR_FATAL, 0,
 					"Read error processing frame.");
 			return 0;
 		}
 
 		/* Count the bitrate */
-#ifdef LEGACY_FLAC
-		if(!FLAC__seekable_stream_decoder_get_decode_position(
-					data->decoder, &decode_position))
-#else
 		if(!FLAC__stream_decoder_get_decode_position(data->decoder, &decode_position))
-#endif
 			decode_position = 0;
 		if (decode_position > data->last_decode_position) {
 			int bytes_per_sec = bytes_per_sample * data->sample_rate
