@@ -1,6 +1,7 @@
 2.6.0 - "Usability"
 	* Changed library requirements:
 	  - FFmpeg/LibAV: raised minimum requirement to release 0.7
+	  - FLAC: raised minimum requirement to release 1.1.3
 	* Removed functionality:
 	  - Transitional code from the previous release
 	  - autogen.sh in favour of autoreconf(1)
